# Jackboxstyle_Platformer

./: .gitignore  DEV_PROGRESS.md  PARTY_MODE_PLAN.md  README.md  img_visualization.py  pyproject.toml  requirements.txt  scan.py
mysite/: db.sqlite3
mysite/cv/: consumers.py  models.py  routing.py  test_runner.py  tests.py  urls.py  views.py
mysite/cv/migrations/: 0009_partyroom_partyplayer.py  0010_partymapsubmission.py  0011_partyroundresult.py
mysite/cv/static/css/: audio.css  party.css
mysite/cv/static/js/: game_misc.js
mysite/cv/templates/: index.html  party_controller.html  party_host.html  party_join.html  party_play.html  party_player_lobby.html  play.html
mysite/mysite/: asgi.py  settings.py  urls.py
