[project]
name = "draw-platformer"
version = "0.1.0"
description = "Draw paper platformer levels and play them in the browser."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "channels>=4.3,<5",
    "daphne>=4.2,<5",
    "Django>=5.2.8,<5.3",
    "numpy>=2,<3",
    "opencv-python>=5,<6",
    "Pillow>=11,<12",
    "qrcode[pil]>=8,<9",
]

[tool.uv]
package = false
